update docker tags

--- a/.github/workflows/docker-push.yaml
+++ b/.github/workflows/docker-push.yaml
@@ -35,4 +35,4 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: docker push mmmoooddd/metabase:dev
+          tags: mmmoooddd/metabase:dev
